Implemented Integer, Double and String setters and getters.