@@ -14,20 +14,124 @@ public class PropertysetImplTest {
 	@Test
 	public void testCreateEmptyPropertyset() {
 		Propertyset propertyset = new PropertysetImpl();
-	    assertFalse(propertyset.isNil());
+		assertFalse(propertyset.isNil());
 
-	    Integer intProperty = propertyset.getIntegerProperty("intPropName");
-	    assertEquals(new Integer(0), intProperty);
-	    Double doubleProperty = propertyset.getDoubleProperty("doublePropName");
-	    assertEquals(new Double(0), doubleProperty);
-	    String stringProperty = propertyset.getStringProperty("stringProperty");
-	    assertEquals("", stringProperty);
-	    Propertyset complexProperty = propertyset.getComplexProperty("complexProperty");
-	    assertNotNull(complexProperty);
-	    assertTrue(complexProperty.isNil());
-	    Propertyset reference = propertyset.getReference("reference");
-	    assertNotNull(reference);
-	    assertTrue(reference.isNil());
+		Integer intProperty = propertyset.getIntegerProperty("intPropName");
+		assertEquals(Integer.valueOf(0), intProperty);
+		Double doubleProperty = propertyset.getDoubleProperty("doublePropName");
+		assertEquals(Double.valueOf(0), doubleProperty);
+		String stringProperty = propertyset.getStringProperty("stringProperty");
+		assertEquals("", stringProperty);
+		Propertyset complexProperty = propertyset.getComplexProperty("complexProperty");
+		assertNotNull(complexProperty);
+		assertTrue(complexProperty.isNil());
+		Propertyset reference = propertyset.getReference("reference");
+		assertNotNull(reference);
+		assertTrue(reference.isNil());
+	}
+
+	/**
+	 * Test getting an integer from various property types
+	 */
+	@Test
+	public void testGetIntegerProperty() {
+		Propertyset propertyset = new PropertysetImpl();
+		assertFalse(propertyset.isNil());
+
+		// Verify that a value set as an integer is returned as the same Integer value
+		Integer intValue1 = Integer.valueOf(1234);
+		propertyset.setIntegerProperty("intValue", intValue1);
+		Integer intValue2 = propertyset.getIntegerProperty("intValue");
+		assertEquals(intValue1, intValue2);
+
+		// Set some double values and read them back as Integer values
+		Double doubleValueContainingInt = Double.valueOf(7);
+		propertyset.setDoubleProperty("doubleValueContainingInt", doubleValueContainingInt);
+		Integer doubleValueReadBackAsInt1 = propertyset.getIntegerProperty("doubleValueContainingInt");
+		assertEquals(Integer.valueOf(7), doubleValueReadBackAsInt1);
+		Double doubleValueContainingNonInt = Double.valueOf(2.78);
+		propertyset.setDoubleProperty("doubleValueReadBackAsInt", doubleValueContainingNonInt);
+		Integer doubleValueReadBackAsInt2 = propertyset.getIntegerProperty("doubleValueReadBackAsInt");
+		assertEquals(Integer.valueOf(3), doubleValueReadBackAsInt2);
+
+		// Set some string values and read them back as Integer values
+		String stringValueContainingInt = "11";
+		propertyset.setStringProperty("stringValueContainingInt", stringValueContainingInt);
+		Integer stringValueReadBackAsInt1 = propertyset.getIntegerProperty("stringValueContainingInt");
+		assertEquals(Integer.valueOf(11), stringValueReadBackAsInt1);
+		String stringValueContainingFloat = "2.78";
+		propertyset.setStringProperty("stringValueContainingInt", stringValueContainingFloat);
+		Integer stringValueReadBackAsInt2 = propertyset.getIntegerProperty("stringValueContainingInt");
+		assertEquals(Integer.valueOf(3), stringValueReadBackAsInt2);
+		String stringValueNotParsableAsANumber = "not a number";
+		propertyset.setStringProperty("stringValueNotParsableAsANumber", stringValueNotParsableAsANumber);
+		Integer stringValueReadBackAsInt3 = propertyset.getIntegerProperty("stringValueNotParsableAsANumber");
+		assertEquals(Integer.valueOf(0), stringValueReadBackAsInt3);
+	}
+
+	/**
+	 * Test getting a double from various property types
+	 */
+	@Test
+	public void testGetDoubleProperty() {
+		Propertyset propertyset = new PropertysetImpl();
+		assertFalse(propertyset.isNil());
+
+		// Verify that a value set as a double is returned as the same Double value
+		Double doubleValue1 = Double.valueOf(3.14);
+		propertyset.setDoubleProperty("doubleValue", doubleValue1);
+		Double doubleValue2 = propertyset.getDoubleProperty("doubleValue");
+		assertEquals(doubleValue1, doubleValue2);
+
+		// Verify that a value set as an int can be returned as a Double containing the same value
+		Integer intValue1 = Integer.valueOf(17);
+		propertyset.setIntegerProperty("intValue1", intValue1);
+		Double doubleValue3 = propertyset.getDoubleProperty("intValue1");
+		assertEquals(Double.valueOf(17), doubleValue3);
+
+		// Verify that a float value in a string can be returned as a Double containing the same value.
+		String stringValueWithFloat = "3.14";
+		propertyset.setStringProperty("stringValueWithFloat", stringValueWithFloat);
+		Double doubleValue4 = propertyset.getDoubleProperty("stringValueWithFloat");
+		assertEquals(Double.valueOf(3.14), doubleValue4);
+		
+		// Verify that an int value in a string can be returned as a Double containing the same value
+		String stringValueWithInt = "27";
+		propertyset.setStringProperty("stringValueWithFloat", stringValueWithInt);
+		Double doubleValue5 = propertyset.getDoubleProperty("stringValueWithFloat");
+		assertEquals(Double.valueOf(27), doubleValue5);
+		
+		// Verify that string not parseable as a numeric value can be returned as a Double with value 0.0
+		String stringValueNotParsableAsANumber = "This is not a number";
+		propertyset.setStringProperty("stringValueNotParsableAsANumber", stringValueNotParsableAsANumber);
+		Double doubleValue6 = propertyset.getDoubleProperty("stringValueNotParsableAsANumber");
+		assertEquals(Double.valueOf(0.0), doubleValue6);
+	}
+	
+	/**
+	 * Test getting a string back from various property types.
+	 */
+	@Test
+	public void testGetStringProperty() {
+		Propertyset propertyset = new PropertysetImpl();
+		
+		// Set a string property and get it back as a string
+		String stringValue = "Hello world!";
+		propertyset.setStringProperty("stringValue", stringValue);
+		String stringValueReadBackFromProperty = propertyset.getStringProperty("stringValue");
+		assertEquals(stringValue, stringValueReadBackFromProperty);
+		
+		// Set an int property and read it back as a string
+		Integer intValue = Integer.valueOf(42);
+		propertyset.setIntegerProperty("intValue", intValue);
+		String intValueAsString = propertyset.getStringProperty("intValue");
+		assertEquals("42", intValueAsString);
+		
+		// Set a double property and read it back as a string
+		Double doubleValue = Double.valueOf(37.5);
+		propertyset.setDoubleProperty("doubleValue", doubleValue);
+		String doubleValueAsString = propertyset.getStringProperty("doubleValue");
+		assertEquals("37.5", doubleValueAsString);
 	}
 
 }
